--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 venv/
 
+.idea/
+/.idea
+\.idea
+
 # dependencies
 /node_modules
 /.pnp
